# mubdel

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
auth/: Cargo.toml  Dockerfile
auth/src/: basic.rs  handler.rs  main.rs  mutation.rs  query.rs
cache/: Cargo.toml  Dockerfile  import-start.sh
cache/migrate/fn/: get_session_by_secret.srql  insert_session.srql
cache/migrate/table/: 000001_session.srql
cache/src/: cache.rs  conn.rs  lib.rs
cache/src/session/: ty.rs
cfg/: Cargo.toml
cfg/config/: auth-cfg.toml.sample  crypto-flow-cfg.toml.sample  payment-cfg.toml.sample
cfg/src/: lib.rs
client/web/: .gitignore  Cargo.toml  Dioxus.toml  README.md
client/web/assets/sass/: main.scss
client/web/assets/sass/abstracts/: _color.scss  _shadow.scss
client/web/assets/sass/base/: _base.scss
client/web/assets/sass/component/: _button.scss  _modal.scss
client/web/assets/sass/layout/dashboard/: _dashboard.scss  _header.scss  _menu.scss
client/web/assets/sass/layout/index/: _forget-password.scss  _index.scss  _login.scss  _signup.scss
client/web/src/: forget_password.rs  home.rs  index.rs  login.rs  main.rs  mobile.rs  privacy_policy.rs  router.rs  signup.rs
client/web/src/components/: modal.rs
client/web/src/layout/: dashboard.rs  header.rs  menu.rs  mod.rs
client/web/src/libs/: fetch.rs  fetcher.rs  mod.rs
client/web/src/libs/storage/: mod.rs
client/web/src/pages/: mod.rs
client/web/src/pages/dashboard/: cards.rs  deposit.rs  home.rs  mod.rs  transactions.rs  wallets.rs  withdrawal.rs
client/web/src/pages/home/: home.rs  mod.rs
client/web/src/pages/index/: about.rs  bug_bounty.rs  cards.rs  cookies_policy.rs  fees.rs  forget_password.rs  index.rs  login.rs  mod.rs  signup.rs
client/web/src/sass/abstracts/: _shadow.scss
client/web/src/sass/base/: _base.scss  _font.scss
client/web/src/sass/layout/dashboard/: _dashboard.scss  _deposit.scss  _header.scss  _menu.scss
client/web/src/sass/layout/index/: _index.scss  _login.scss  _signup.scss
client/web/src/sass/utilities/: _utilities.scss
crypto/: Cargo.toml
crypto-flow/: Cargo.toml  Dockerfile
crypto-flow/src/: handler.rs  main.rs  mutation.rs  query.rs
crypto-flow/src/crypto/: solana.rs
crypto/src/: lib.rs  solana.rs
database/: Cargo.toml  Dockerfile  import.sh
database/migrate/fn/: delete_user.srql  get_block.srql  get_card.srql  get_latest_wallet.srql  get_user.srql  get_user_by_email.srql  get_user_by_username.srql  get_wallet_by_public_key.srql  insert_deposit.srql  insert_user.srql  insert_wallet.srql  update_balance.srql  update_latest_block.srql  update_stripe_customer_id.srql
database/migrate/seed/: block.srql
database/migrate/table/: 000001_user.srql  000002_card.srql  000002_payment_card.srql  000003_wallet.srql  000004_deposit.srql  000005_withdrawal.srql  000006_balance.srql  000007_block.srql
database/src/: conn.rs  database.rs  lib.rs
database/src/crypto/: ty.rs
database/src/payment/: ty.rs
database/src/user/: ty.rs
docker/loki/: Dockerfile  config.yaml
email/: Cargo.toml
email/src/: client.rs  lib.rs  template.rs
email/templates/: email_verification.tmpl
error-macros/: Cargo.toml
error-macros/src/: lib.rs
errors/: Cargo.toml  messages.ftl
errors/src/: errors.rs  lib.rs
helper/: Cargo.toml
helper/src/: graphql.rs  lib.rs  poem.rs  rand.rs
middleware/: Cargo.toml
middleware/src/: auth.rs
payment/: Cargo.toml  Dockerfile
payment-gate/: Cargo.toml
payment-gate/src/: lib.rs  ty.rs
payment-gate/src/stripe/: mod.rs
payment/src/: handler.rs  main.rs  mutation.rs  query.rs
settlement/: Cargo.toml
settlement/src/: main.rs
settlement/src/deposit/: deposit.rs  depositor.rs  mod.rs  solana.rs
startup/: Cargo.toml
startup/src/: startup.rs
ty/: Cargo.toml
ty/src/: auth.rs  balance.rs  block.rs  currency.rs  deposit.rs  gql_err.rs  lib.rs  payment.rs  role.rs  service.rs  surreal.rs  user.rs  wallet.rs
user/: Cargo.toml  Dockerfile
user/src/: hander.rs  main.rs  mutation.rs  query.rs
web-server/: Cargo.toml  Dockerfile
web-server/src/: main.rs  spa.rs
