[workspace]
members = [
  "client/web",
  "crypto-flow",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Mubdel Maintainers"]
repository = "https://github.com/mubdel/mubdel"
edition = "2021"

[workspace.dependencies]
solana-sdk = "2.1.0"
solana-client = "2.1.0"
anyhow = "1.0.92"
dioxus = { version = "0.5", features = ["web", "router"] }
manganis = "0.2.2"
