[workspace]
members = [
  "auth",
  "cache",
  "cfg",
  "client/web",
  "database",
  "crypto",
  "crypto-flow",
  "error-macros",
  "errors",
  "middleware",
  "payment",
  "payment-gate",
  "helper",
  "ty",
  "user",
  "web-server",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Mubdel Maintainers"]
repository = "https://github.com/mubdel/mubdel"
edition = "2021"

[workspace.dependencies]
solana-sdk = "2.1.0"
solana-client = "2.1.0"
anyhow = "1.0.92"
dioxus = { version = "0.5", features = ["web", "router"] }
manganis = "0.2.2"
async-graphql = "7.0.11"
bcrypt = "0.15.1"
clap = { version = "4.5.20", features = ["derive"] }
quote = "1.0.37"
syn = "2.0.87"
chrono = "0.4.38"
poem = { version = "3.1.3", features = ["static-files"] }
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = "2.0.4"
fluent = "0.16.1"
fluent-bundle = "0.15.3"
intl-memoizer = "0.5.2"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
toml = "0.8.19"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
async-graphql-poem = "7.0.11"
tracing-loki = "0.2.5"
tracing-subscriber = "0.3.18"
gql_client = "1.0.7"
dioxus-logger = "0.5.1"
percent-encoding = "2.3.1"
futures-util = "0.3.31"
web-sys = "0.3.72"

auth = { path = "auth", version = "0.0.1" }
cache = { path = "cache", version = "0.0.1" }
cfg = { path = "cfg", version = "0.0.1" }
web = { path = "client/web", version = "0.0.1" }
database = { path = "database", version = "0.0.1" }
crypto-flow = { path = "crypto-flow", version = "0.0.1" }
error-macros = { path = "error-macros", version = "0.0.1" }
errors = { path = "errors", version = "0.0.1" }
middleware = { path = "middleware", version = "0.0.1" }
payment = { path = "payment", version = "0.0.1" }
payment-gate = { path = "payment-gate", version = "0.0.1" }
helper = { path = "helper", version = "0.0.1" }
startup = { path = "startup", version = "0.0.1" }
ty = { path = "ty", version = "0.0.1" }
user = { path = "user", version = "0.0.1" }
