[package]
name = "crypto"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

ty = { workspace = true }
database = { workspace = true }
