[package]
name = "web"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
manganis = { workspace = true }
gql_client = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
async-graphql = { workspace = true }
