[package]
name = "web"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
gql_client = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
web-sys = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-std = "1.13.0"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", features = ["time"] }
